fix: remove unnecessary style that breaks the global style

--- a/plugins/woocommerce-blocks/assets/js/blocks/product-filters-overlay-navigation/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/product-filters-overlay-navigation/style.scss
@@ -13,13 +13,4 @@
 		margin-left: auto;
 		margin-right: auto;
 	}
-
-	.is-style-link & {
-		background: transparent;
-		color: inherit;
-		&:hover {
-			background: transparent;
-			color: inherit;
-		}
-	}
 }
